...
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/emailInvalid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_a_valid_email"
            android:visibility="gone"/>
    </LinearLayout>

...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border_top">

        <Button
            android:id="@+id/emailNextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/next"/>
    </RelativeLayout>
...
