...
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/passwordInvalid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_must_be_longer_than_8_chars"
            android:visibility="gone"/>
    </LinearLayout>

...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border_top">

        <Button
            android:id="@+id/passwordNextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/next"/>
    </RelativeLayout>
...
